<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="_14_9_2019">14/9/2019</string>
    <string name="selected_date">Selected Date</string>
    <string name="_12324238">12324238</string>
    <string name="in_minutes_till_date">In Minutes till date</string>
</resources>